--- a/examples/app-example-androidjunitrunner/app/src/main/res/values/strings.xml
+++ b/examples/app-example-androidjunitrunner/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="action_settings">Settings</string>
+    <string name="access_token"></string>
 </resources>
