Preparing merge with facebook master

--- a/examples/app-example-multipledevices/app/src/main/res/values/strings.xml
+++ b/examples/app-example-multipledevices/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">app-example-multipledevices</string>
     <string name="action_settings">Settings</string>
 </resources>
